fix: fix major IE11 rendering issue with device viewer relating to removing the cursor visibility w/ CSS

--- a/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer.scss
+++ b/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer.scss
@@ -301,14 +301,20 @@ $magnifier-size: 350px;
 
 
 
+bolt-image-zoom,
 bolt-device-viewer .c-bolt-device-viewer__screen--magnify {
   cursor: none;
 
-.c-bolt-device-viewer__screen:hover > .c-bolt-device-viewer__overlay {
-	opacity: 0;
+  // Don't hide cursor on IE10 / 11 due to janky behavior
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    cursor: inherit;
+  }
 }
 
 
+bolt-image-zoom:hover > .c-bolt-image-zoom__overlay {
+  opacity: 0;
+}
 
 
 .drift-zoom-pane {
